* 0.18.0

  - change move the core of the recorder to netidx-archive

  - the recorder can now rotate it's log file periodically, and can
    serve a directory of log files transparently to clients. There are
    optional shell hooks the archiver can call out to announce new log
    files, list log files, and get log files from some kind of long
    term archive.

  - the recorder now uses a config file instead of command line
    arguments, it was just getting too complex to manage the
    arguments. running with --example will print an example
    config. Sorry for the breakage.

  - the recorder archive format is unchanged, but the file layout is
    different. The recorder uses a directory, which it will create if
    it doesn't exist. The current log file is always called
    "current". Historical log files are called the rfc3339 timestamp
    when they ended. Again sorry for the breakage.

  - update to biflags 2.0.

  - implement serialize and deserialize for pooled

  - change the websocket proxy protocol to expose batching

* 0.17.4

  - ignore pings in netidx-wsproxy

  - add serialize/deserialize to netidx-netproto::value::Typ 

* 0.17.3

  - add a pack implementation for HashSet
  
  - don't put empty objects back in pools

* 0.17.2
  
  - implement debug on Publisher

  - change the websocket proxy protocol a bit to make it possible to
    have multiple in flight rpcs.

  - Allow rpcs to complete out of order, and don't wait for them to
    move on
  
  - Fix trait requirements for Packing HashMap
  
  - implement a new toplevel Pack directive #[pack(unwrapped)]
    which prevents length wrapping the type it is applied to.
    Also the Pack macro now validates attributes.
    
  - websocket-proxy; expose the warp filter that runs the proxy so
    it can be combined into a bigger warp api if desired.

  - change netidx-archive to use the better maintained memmap2 crate
    instead of mapr

* 0.17.1
