@@ -1,6 +1,6 @@
 [package]
 name = "netidx-core"
-version = "0.18.0"
+version = "0.18.1"
 authors = ["Eric Stokes <letaris@gmail.com>"]
 edition = "2021"
 license = "MIT"
